Fix build for java 16 mvn