@@ -37,9 +37,9 @@
 
     <profiles>
         <profile>
-            <id>result-preview</id>
+            <id>result-preview-15</id>
             <activation>
-                <jdk>[15,16]</jdk>
+                <jdk>15</jdk>
             </activation>
             <build>
                 <finalName>${project.artifactId}-${project.version}</finalName>
@@ -50,6 +50,35 @@
                         <configuration>
                             <source>15</source>
                             <target>15</target>
+                            <compilerArgs>
+                                <arg>--enable-preview</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--enable-preview</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>result-preview-16</id>
+            <activation>
+                <jdk>16</jdk>
+            </activation>
+            <build>
+                <finalName>${project.artifactId}-${project.version}</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>16</source>
+                            <target>16</target>
                             <compilerArgs>
                                 <arg>--enable-preview</arg>
                             </compilerArgs>
